--- a/index.html
+++ b/index.html
@@ -1,99 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-site-verification" content="YEp28zWd165QktENlIuKEV7E6-4_M8smkZ-i-smKVYY" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Discovering Confidence: Why Invisalign at kidsgrovedental is Your Smile Solution</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px auto;
-      max-width: 800px; /* Center align and limit content width */
-      padding: 20px;
-      background-color: #f9f9f9; /* Light background color */
-      border: 1px solid #ddd; /* Light border around content */
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow effect */
-    }
-    h1 {
-      color: #333;
-      border-bottom: 2px solid #ccc; /* Bottom border for headings */
-      padding-bottom: 10px;
-      margin-bottom: 20px;
-    }
-    h2 {
-      color: #555;
-      margin-top: 30px; /* Space above each section */
-    }
-    p {
-      color: #666;
-      margin-bottom: 15px;
-    }
-    ul, ol {
-      color: #888;
-      margin-left: 20px;
-      text-align: left; /* Ensure lists are left aligned */
-    }
-    iframe {
-      display: block; /* Ensure iframe is treated as a block element */
-      margin: 20px auto; /* Center the iframe horizontally */
-      border: 1px solid #ddd; /* Add border around iframe */
-      border-radius: 5px; /* Rounded corners for iframe */
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cosmetic Dentistry Trends 2024: What's New at Kidsgrove Dental</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2 {
+            color: #4CAF50;
+            border-bottom: 2px solid #4CAF50;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            margin-top: 30px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 30px;
+        }
+        .map-container {
+            width: 100%;
+            max-width: 600px;
+            height: 450px;
+            border: 4px solid #ddd;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(0,0,0,0.1);
+        }
+        .map-container iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+        .section {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        .faq {
+            background-color: #f9f9f9;
+            padding: 20px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        .faq dl {
+            margin-top: 0;
+        }
+        .website-link {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .website-link a {
+            color: #4CAF50;
+            text-decoration: none;
+            border-bottom: 1px dashed #4CAF50;
+            transition: border-bottom-color 0.3s ease;
+        }
+        .website-link a:hover {
+            border-bottom-color: transparent;
+        }
+    </style>
 </head>
 <body>
-  <h1>Discovering Confidence: Why Invisalign at kidsgrovedental is Your Smile Solution</h1>
+    <h1>Cosmetic Dentistry Trends 2024: What's New at Kidsgrove Dental</h1>
 
-  <p>In today's world, confidence often begins with a smile. A straight, beautiful smile can significantly impact how we perceive ourselves and how others perceive us. For those considering orthodontic treatment, Invisalign has emerged as a leading choice, offering a discreet and effective way to achieve a perfect smile. At kidsgrovedental, we understand the transformative power of a confident smile, which is why we recommend Invisalign as your ideal smile solution.</p>
+    <div class="section">
+        <p>Explore the cutting-edge realm of cosmetic dentistry with a glimpse into the trends awaiting you at Kidsgrove Dental in Stoke-On-Trent. From revolutionary teeth whitening techniques to the latest in smile makeover procedures, the horizon of possibilities is vast. Discover how innovative veneer technologies and advancements in dental implants are reshaping the way we approach enhancing smiles. Stay tuned to uncover the secrets of achieving a radiant smile in 2024 and beyond at Kidsgrove Dental &amp; Implant Centre.</p>
+    </div>
 
-  <h2>Understanding Invisalign: The Modern Approach to Orthodontics</h2>
+    <div class="section">
+        <h2>Teeth Whitening Innovations</h2>
+        <p>Explore the latest advancements in teeth whitening techniques that are revolutionizing cosmetic dentistry in 2024. Home treatments have gained popularity with the introduction of innovative products that provide professional-grade results from the comfort of your own home. These at-home kits utilize natural ingredients, such as activated charcoal and baking soda, to gently remove stains and brighten your smile.</p>
+        <p>However, for those seeking more immediate and dramatic results, professional in-office whitening treatments remain the gold standard. Dentists now offer advanced whitening procedures using professional-grade bleaching agents that are both safe and effective. These treatments can significantly lighten teeth in just one session, making them a popular choice for individuals looking to enhance their smiles quickly and efficiently.</p>
+    </div>
 
-  <p>Invisalign represents a revolutionary approach to orthodontic treatment. Unlike traditional metal braces, Invisalign uses clear aligners that are virtually invisible. These custom-made aligners gradually shift your teeth into their desired position, providing a comfortable and aesthetically pleasing alternative to braces.</p>
+    <div class="section">
+        <h2>Advancements in Veneer Technology</h2>
+        <p>With the continuous evolution of cosmetic dentistry, advancements in veneer technology have revolutionized the way professionals enhance and transform smiles. Veneers are now more durable and sustainable than ever before, offering long-lasting solutions for individuals seeking to improve the appearance of their teeth. The enhanced durability of modern veneers ensures that they can withstand daily wear and tear, providing a reliable option for individuals looking to enhance their smiles.</p>
+        <p>Moreover, advancements in veneer customization have enabled dental professionals to create veneers that not only improve the aesthetics of a smile but also blend seamlessly with the natural teeth. Customization options now allow for precise color matching, shape adjustments, and personalized detailing, ensuring that each veneer complements the unique characteristics of the patient’s smile.</p>
+        <p>This level of customization results in natural-looking outcomes that enhance the overall appearance of the teeth while maintaining a harmonious and aesthetically pleasing smile.</p>
+    </div>
 
-  <h2>Benefits of Choosing Invisalign at kidsgrovedental</h2>
+    <div class="section">
+        <h2>Latest Trends in Dental Implants</h2>
+        <p>Recent advancements in dental implant technology have sparked a wave of innovative trends shaping the field of implant dentistry. Implant materials play a crucial role in the success and longevity of dental implants. Titanium implants have been the standard choice for years due to their biocompatibility and durability. However, newer materials like zirconia are gaining popularity for their natural appearance and potential for reduced inflammation.</p>
+        <p>Surgical techniques are also evolving to enhance the precision and effectiveness of dental implant procedures. Guided implant surgery, utilizing advanced imaging technology to create 3D models of the patient’s mouth, allows for more accurate implant placement. This minimally invasive approach reduces recovery time and improves overall patient satisfaction.</p>
+        <p>Furthermore, immediate implant placement following tooth extraction is becoming more common, streamlining the implant process and reducing the number of appointments needed.</p>
+        <p>These advancements in implant materials and surgical techniques are revolutionizing the field of implant dentistry, providing patients with more efficient and aesthetically pleasing solutions for tooth replacement.</p>
+    </div>
 
-  <ul>
-    <li><strong>Discreet Treatment:</strong> Invisalign aligners are clear and barely noticeable, allowing you to straighten your teeth without drawing attention to your treatment.</li>
-    <li><strong>Comfort and Convenience:</strong> The aligners are removable, making it easy to eat, brush, and floss as you normally would. This flexibility enhances comfort throughout your treatment journey.</li>
-    <li><strong>Predictable Results:</strong> Through advanced 3D imaging technology, Invisalign treatment plans are meticulously customized for each patient. This ensures predictable results and reduces treatment time compared to traditional braces.</li>
-    <li><strong>Improved Oral Health:</strong> Straighter teeth are easier to clean and maintain, reducing the risk of gum disease and tooth decay. Invisalign not only enhances your smile but also promotes better overall oral health.</li>
-  </ul>
+    <div class="section">
+        <h2>Smile Makeover Techniques</h2>
+        <p>Enhancing smiles through cosmetic dentistry involves a variety of advanced techniques tailored to meet individual aesthetic goals and dental needs. When considering a smile makeover, several modern options can help you achieve the perfect smile you desire:</p>
+        <ul>
+            <li>Digital Smile Design: Utilizing cutting-edge technology to create a digital preview of your potential smile transformation, allowing for precise planning and customization.</li>
+            <li>Personalized Treatments: Tailoring each aspect of the smile makeover to address your specific concerns and preferences, ensuring a unique and natural-looking result.</li>
+            <li>Modern Orthodontic Solutions: Embracing the latest orthodontic advancements to straighten teeth effectively and discreetly.</li>
+            <li>Invisible Braces: Offering a more aesthetically pleasing alternative to traditional braces, using clear aligners to correct misalignments without drawing attention to the treatment.</li>
+        </ul>
+    </div>
 
-  <h2>The Invisalign Process at kidsgrovedental</h2>
+    <div class="section">
+        <h2>Cutting-Edge Cosmetic Dentistry Services</h2>
+        <p>Explore the latest advancements in cosmetic dentistry services that are revolutionizing smile transformations today. Gum contouring techniques play a pivotal role in reshaping the gumline, enhancing symmetry, and correcting gummy smiles. This procedure involves sculpting the gum tissue to create a more balanced and aesthetically pleasing smile. By utilizing state-of-the-art technology and precise surgical methods, gum contouring can achieve remarkable results with minimal discomfort and downtime.</p>
+        <p>Additionally, lip enhancement procedures are gaining popularity as a non-invasive way to improve the overall appearance of the smile. From subtle enhancements to more dramatic changes, lip fillers and injections can redefine the shape, volume, and contour of the lips, complementing the teeth and enhancing facial harmony. These procedures are performed with precision and artistry, ensuring natural-looking results that enhance the patient’s smile and confidence.</p>
+    </div>
 
-  <ol>
-    <li><strong>Initial Consultation:</strong> Your journey begins with a comprehensive consultation at kidsgrovedental. Our experienced orthodontists will assess your dental health and discuss your smile goals.</li>
-    <li><strong>Custom Treatment Plan:</strong> Using advanced 3D imaging technology, we create a precise treatment plan tailored to your unique dental structure and desired outcome.</li>
-    <li><strong>Wearing Your Aligners:</strong> You will receive a series of custom-made aligners to wear for about 20-22 hours a day, changing to a new set approximately every 1-2 weeks as your teeth gradually move into alignment.</li>
-    <li><strong>Monitoring Progress:</strong> Throughout your treatment, regular check-ups at kidsgrovedental allow us to monitor your progress and make any necessary adjustments to ensure optimal results.</li>
-    <li><strong>Achieving Your Dream Smile:</strong> By the end of your treatment, typically within 12-18 months, you will achieve a beautifully straight smile that boosts your confidence and leaves a lasting impression.</li>
-  </ol>
+    <div class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <dl>
+            <dt>Are There Any Age Restrictions for Cosmetic Dental Procedures?</dt>
+            <dd>There are generally no strict age restrictions for cosmetic dental procedures. These treatments can benefit individuals of various ages, enhancing self-esteem and confidence. Consult with a dentist to explore options suitable for your specific needs.</dd>
 
-  <h2>Why Choose kidsgrovedental for Your Invisalign Journey</h2>
+            <dt>How Long Do Cosmetic Dental Results Typically Last?</dt>
+            <dd>To maintain cosmetic dental results, follow-up appointments are crucial. Longevity depends on aftercare and regular maintenance tips. By heeding these guidelines, you can prolong the effects of cosmetic procedures and keep your smile looking great.</dd>
 
-  <p>At kidsgrovedental, we are committed to excellence in dental care and patient satisfaction. Here’s why we stand out:</p>
+            <dt>Can Cosmetic Dentistry Improve the Shape of My Face?</dt>
+            <dd>Cosmetic dentistry can enhance facial contours through techniques like smile makeovers, providing not only dental improvements but also subtle facial rejuvenation. By focusing on your smile, dentists can strategically improve your overall facial appearance.</dd>
 
-  <ul>
-    <li><strong>Experienced Professionals:</strong> Our team includes skilled orthodontists with extensive experience in Invisalign treatment.</li>
-    <li><strong>Personalized Care:</strong> We prioritize personalized care, ensuring each patient receives individual attention and a treatment plan tailored to their unique needs.</li>
-    <li><strong>State-of-the-Art Facilities:</strong> kidsgrovedental is equipped with the latest technology and amenities to provide a comfortable and efficient treatment experience.</li>
-    <li><strong>Positive Patient Experiences:</strong> We take pride in our track record of satisfied patients who have achieved remarkable results with Invisalign at kidsgrovedental.</li>
-  </ul>
+            <dt>Are There Any Alternative Options to Traditional Braces for Adults?</dt>
+            <dd>Looking for Invisalign alternatives? Clear aligners offer a discreet option to traditional braces for adults. They are removable, making oral hygiene easier, but may require more discipline for consistent wear to achieve desired results.</dd>
 
-  <h2><strong>Cosmetic Dentistry Trends 2024</strong></h2>
+            <dt>What Are the Potential Risks Associated With Cosmetic Dental Treatments?</dt>
+            <dd>When considering cosmetic dental treatments, it’s crucial to be aware of potential risks. Complications such as allergic reactions or gum sensitivity can occur. Long-term effects may require additional maintenance, so consult with your dentist.</dd>
+        </dl>
+    </div>
 
-  <p>As we look ahead to the future of <a href="https://kidsgrovedental.com/">cosmetic dentistry trends 2024</a>, Invisalign continues to lead the way with its innovative approach to orthodontic treatment. In 2024, more patients are choosing Invisalign for its discreet, comfortable, and effective results. At kidsgrovedental, we stay at the forefront of these trends, ensuring our patients benefit from the latest advancements in dental technology.</p>
+    <div class="section">
+        <h2>Conclusion</h2>
+        <p>Stay ahead of the curve with the latest <a href="https://kidsgrovedental.com/">cosmetic dentistry trends 2024</a> at Kidsgrove Dental. From teeth whitening innovations to advanced veneer technology and cutting-edge dental implants, our clinic offers a range of services to enhance your smile and boost your confidence.</p>
+        <p>With personalized smile makeovers and discreet teeth straightening options, Kidsgrove Dental is your go-to for all your cosmetic dentistry needs in Stoke-On-Trent, England. Experience the difference with our innovative techniques and expert care.</p>
+    </div>
 
-  <h2>Conclusion: Transform Your Smile with Invisalign at kidsgrovedental</h2>
+    <div class="center">
+        <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9585.285277405372!2d-2.2399635!3d53.086464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487a5cc970ae128d%3A0x4bd93d1d5d95bede!2sKidsgrove%20Dental%20%26%20Implant%20Centre%20%7C%20Dentist%20Stoke-on-Trent!5e0!3m2!1sen!2sus!4v1719163306525!5m2!1sen!2sus" 
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
 
-  <p>Choosing Invisalign at kidsgrovedental is not just about straightening your teeth; it's about transforming your confidence and enhancing your overall well-being. With our expertise and dedication to exceptional dental care, we invite you to embark on a journey to a brighter, more confident smile. Contact kidsgrovedental today to schedule your consultation and discover why Invisalign is the smile solution you've been waiting for.</p>
+    <div class="section">
+        <h2>Contact Information</h2>
+        <p>Kidsgrove Dental &amp; Implant Centre | Dentist Stoke-on-Trent<br>
+        79 Liverpool Rd, Kidsgrove, Stoke-on-Trent ST7 4EW, United Kingdom<br>
+        Phone: +44 1782 782520</p>
+    </div>
 
-  <p>Remember, your smile is your signature – let kidsgrovedental help you make it unforgettable.</p>
-
-  <!-- Google Maps iframe -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9585.285277405372!2d-2.2399635!3d53.086464!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487a5cc970ae128d%3A0x4bd93d1d5d95bede!2sKidsgrove%20Dental%20%26%20Implant%20Centre%20%7C%20Dentist%20Stoke-on-Trent!5e0!3m2!1sen!2sus!4v1719163306525!5m2!1sen!2sus" width="600" height="450" style="border:1px solid #ddd; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="website-link">
+        <p><a href="https://kidsgrovedental.com/">Visit our website</a></p>
+        <p>Email: <a href="mailto:admin@kidsgrovedental.com">admin@kidsgrovedental.com</a></p>
+    </div>
 
 </body>
 </html>
